# algorithms_scratchpad_old

./: BST copy.swift  BST.java  BST.swift  BSTTestClient1.java  Bag copy 2.java  Bag copy.java  Bag.h  Bag.java  Bag.swift  BinarySearchST.java  Ch_1_1.java  Ch_1_1_3.java  Ch_1_1_5.java  Ch_1_1_9.java  Evaluate copy.java  Evaluate.java  FCStackClient.java  FixedCapacityStack.java  FixedCapacityStackOfStrings copy.java  FixedCapacityStackOfStrings.java  Flips.java  InfixCorrect.java  Item_ADT.h  LinkedBag.java  LinkedQueue copy.swift  LinkedQueue.java  LinkedQueue.swift  LinkedStack.java  LinkedStack.swift  Matrix.h  Parentheses.java  Queue copy 2.java  Queue copy.java  Queue.h  Queue.java  QueueClient.java  Queue_old.h  README.md  RedBlackBST.java  ResizingArrayBag.java  (+133 more)
algorithms_in_c++_pt1/: CMakeLists.txt
